# operational-semantics-lab

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  LICENSE  Makefile  README.md  pyproject.toml
ontology/: example_graph.ttl  operational_semantics.ttl  shapes.ttl
policies/: crm_case_policy.yaml  jira_write_policy.yaml  policies.yaml  slack_message_policy.yaml
src/operational_semantics/: config.py  main.py
src/operational_semantics/approvals/: __init__.py  integrity.py  service.py
src/operational_semantics/domain/: __init__.py  enums.py  errors.py  hashing.py  lifecycle.py  models.py
src/operational_semantics/ontology/: __init__.py  graph_builder.py  namespace.py  serializer.py  validator.py
src/operational_semantics/persistence/: __init__.py  database.py  repositories.py  tables.py
src/operational_semantics/policy/: __init__.py  decisions.py  evaluator.py  opa_adapter.py  rules.py
src/operational_semantics/provenance/: __init__.py  auditor.py  ledger.py  prov_mapping.py
