[project]
name = "operational-semantics-lab"
version = "0.1.0"
description = "A governed knowledge layer for enterprise agents — ontology, policy, approval, provenance"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rmax.ai" }]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "rdflib>=7.1.0",
    "pyshacl>=0.29.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "mcp>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/operational_semantics"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = ["rdflib.*", "pyshacl.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
